update front end page
